--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ testingshit/testwithframes.py
 testingshit/testwithframes2.py
 testingshit/testwithframes3.py
 testingshit/tkinter_tab_test.py
+
+/.venv
